# $Id: Makefile.am,v 1.2 2001/12/31 16:02:12 alex Exp $

# $Log: Makefile.am,v $
# Revision 1.2  2001/12/31 16:02:12  alex
# - Projektdateien von Mac OS X werden nun auch in die Distribution aufgenommen.
#
# Revision 1.1  2001/12/12 17:21:58  alex
# - Projektdatei fuer den Mac OS X Project Builder erstellt.
#

SUBDIRS = ngircd.pbproj

maintainer-clean-local:
	rm -f Makefile Makefile.in
	rm -rf build

# -eof-
