#
# ngIRCd -- The Next Generation IRC Daemon
# Copyright (c)2001-2017 Alexander Barton (alex@barton.de) and Contributors
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
# Please read the file COPYING, README and AUTHORS for more information.
#

SUBDIRS = Debian MacOSX

EXTRA_DIST = README \
	ngindent \
	ngircd-bsd.sh \
	ngIRCd-Logo.gif \
	ngircd-redhat.init \
	ngircd.logcheck \
	ngircd.service \
	ngircd.socket \
	ngircd.spec \
	platformtest.sh \
	systrace.policy

maintainer-clean-local:
	rm -f Makefile Makefile.in

# -eof-
