#
# ngIRCd -- The Next Generation IRC Daemon
# Copyright (c)2001,2002 by Alexander Barton (alex@barton.de)
#
# Dieses Programm ist freie Software. Sie koennen es unter den Bedingungen
# der GNU General Public License (GPL), wie von der Free Software Foundation
# herausgegeben, weitergeben und/oder modifizieren, entweder unter Version 2
# der Lizenz oder (wenn Sie es wuenschen) jeder spaeteren Version.
# Naehere Informationen entnehmen Sie bitter der Datei COPYING. Eine Liste
# der an ngIRCd beteiligten Autoren finden Sie in der Datei AUTHORS.
#
# $Id: Makefile.am,v 1.2 2002/01/02 02:40:15 alex Exp $
#
# $Log: Makefile.am,v $
# Revision 1.2  2002/01/02 02:40:15  alex
# - Copyright-Texte ergaenzt und aktualisiert,
# - fehlende Dateien in Projekt aufgenommen.
#
# Revision 1.1  2001/12/31 16:02:12  alex
# - Projektdateien von Mac OS X werden nun auch in die Distribution aufgenommen.
#

EXTRA_DIST = project.pbxproj

maintainer-clean-local:
	rm -f Makefile Makefile.in

# -eof-
