#
# ngIRCd -- The Next Generation IRC Daemon
# Copyright (c)2001-2011 Alexander Barton (alex@barton.de) and Contributors
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
# Please read the file COPYING, README and AUTHORS for more information.
#

EXTRA_DIST = \
	README \
	0001-Revert-Removed-ngircd.patch \
	0002-ngircd-whitespace-fixes.patch \
	0003-Update-ngIRCd-protocol-module-for-current-Anope-1.9.patch \
	0004-ngircd-Do-PING-PONG-on-server-burst-to-sync-servers.patch \
	0005-ngircd-always-prefix-modes-in-CHANINFO-with.patch \
	0006-ngircd-support-user-mode-R-and-channel-mode-R.patch \
	0007-ngircd-Fix-handling-of-JOIN-commands.patch \
	0008-ngircd-Allow-setting-modes-by-clients-on-burst.patch \
	0009-ngircd-Update-protocol-module-for-current-Anope-1.9.patch \
	0010-ngircd-Add-ProtongIRCd.patch \
	0011-ngircd-Update-protocol-module-for-current-Anope-1.9.patch \
	0012-ngircd-Channel-mode-r-is-supported-now.patch \
	0013-ngircd-Update-copyright-notice.patch \
	0014-ngircd-set-unset-GLINE-s-on-AKILL-commands.patch \
	0015-ngircd-ngIRCd-supports-channel-mode-e-now.patch \
	0016-ngircd-support-SQUERY-command.patch

maintainer-clean-local:
	rm -f Makefile Makefile.in

# -eof-
